Fix typos and formatting on the server and remove debug printouts from the gRPC Airmar server

--- a/BBB/webserver/templates/Airmar.html
+++ b/BBB/webserver/templates/Airmar.html
@@ -352,11 +352,11 @@
         <tr>
       
             <td
-               class="" style="vertical-align:top;width:600px;"
+               class="" style="vertical-align:top;width:300px;"
             >
           <![endif]-->
             
-      <div class="mj-column-per-100 outlook-group-fix" style="font-size:13px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;">
+      <div class="mj-column-per-50 outlook-group-fix" style="font-size:13px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;">
         
       <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="vertical-align:top;" width="100%">
         
@@ -364,7 +364,33 @@
               <td align="left" style="font-size:0px;padding:15px 15px 15px 15px;word-break:break-word;">
                 
       <div style="font-family:Ubuntu, Helvetica, Arial, sans-serif;font-size:11px;line-height:1.5;text-align:left;color:#000000;">
-        <p style="text-align: center;">Barometric Press: {{baro_press}}</p>
+        <p style="text-align: right;">Barometric Pressure:</p>
+      </div>
+    
+              </td>
+            </tr>
+          
+      </tbody></table>
+    
+      </div>
+    
+          <!--[if mso | IE]>
+            </td>
+          
+            <td
+               class="" style="vertical-align:top;width:300px;"
+            >
+          <![endif]-->
+            
+      <div class="mj-column-per-50 outlook-group-fix" style="font-size:13px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;">
+        
+      <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="vertical-align:top;" width="100%">
+        
+            <tbody><tr>
+              <td align="left" style="font-size:0px;padding:15px 15px 15px 15px;word-break:break-word;">
+                
+      <div style="font-family:Ubuntu, Helvetica, Arial, sans-serif;font-size:11px;line-height:1.5;text-align:left;color:#000000;">
+        <p style="text-align: left;">{{baro_press}}</p>
       </div>
     
               </td>
@@ -541,7 +567,7 @@
               <td align="left" style="font-size:0px;padding:15px 15px 15px 15px;word-break:break-word;">
                 
       <div style="font-family:Ubuntu, Helvetica, Arial, sans-serif;font-size:11px;line-height:1.5;text-align:left;color:#000000;">
-        <p>Latitute:{{lat}}</p>
+        <p>Latitute: {{lat}}</p>
 <p>Longitude: {{lon}}</p>
 <p>Altitude: {{alt}}</p>
 <p>Ground Speed: {{ground_speed}}</p>
@@ -607,7 +633,7 @@
               <td align="left" style="font-size:0px;padding:15px 15px 15px 15px;word-break:break-word;">
                 
       <div style="font-family:Ubuntu, Helvetica, Arial, sans-serif;font-size:11px;line-height:1.5;text-align:left;color:#000000;">
-        <p style="text-align: right;">Compass</p>
+        <p style="text-align: right;">Compass:</p>
       </div>
     
               </td>
@@ -877,7 +903,7 @@
               <td align="left" style="font-size:0px;padding:15px 15px 15px 15px;word-break:break-word;">
                 
       <div style="font-family:Ubuntu, Helvetica, Arial, sans-serif;font-size:11px;line-height:1.5;text-align:left;color:#000000;">
-        <p style="text-align: right;">PitchRoll</p>
+        <p style="text-align: right;">PitchRoll:</p>
       </div>
     
               </td>
@@ -954,11 +980,11 @@
         <tr>
       
             <td
-               class="" style="vertical-align:top;width:600px;"
+               class="" style="vertical-align:top;width:300px;"
             >
           <![endif]-->
             
-      <div class="mj-column-per-100 outlook-group-fix" style="font-size:13px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;">
+      <div class="mj-column-per-50 outlook-group-fix" style="font-size:13px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;">
         
       <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="vertical-align:top;" width="100%">
         
@@ -966,7 +992,33 @@
               <td align="left" style="font-size:0px;padding:15px 15px 15px 15px;word-break:break-word;">
                 
       <div style="font-family:Ubuntu, Helvetica, Arial, sans-serif;font-size:11px;line-height:1.5;text-align:left;color:#000000;">
-        <p style="text-align: center;">Relative Humidity: {{rel_hum}}</p>
+        <p style="text-align: right;">Relative Humidity:</p>
+      </div>
+    
+              </td>
+            </tr>
+          
+      </tbody></table>
+    
+      </div>
+    
+          <!--[if mso | IE]>
+            </td>
+          
+            <td
+               class="" style="vertical-align:top;width:300px;"
+            >
+          <![endif]-->
+            
+      <div class="mj-column-per-50 outlook-group-fix" style="font-size:13px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;">
+        
+      <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="vertical-align:top;" width="100%">
+        
+            <tbody><tr>
+              <td align="left" style="font-size:0px;padding:15px 15px 15px 15px;word-break:break-word;">
+                
+      <div style="font-family:Ubuntu, Helvetica, Arial, sans-serif;font-size:11px;line-height:1.5;text-align:left;color:#000000;">
+        <p style="text-align: left;">{{rel_hum}}</p>
       </div>
     
               </td>
