--- a/Telemetry/public/css/dashboard.css
+++ b/Telemetry/public/css/dashboard.css
@@ -64,3 +64,68 @@ h6 {
 	margin-top: 45px;
 	margin-bottom: 40px;
 }
+
+
+/* TEMP LOCATIONS FOR DEMO */
+
+#map-container{
+	z-index: 0;
+	position: fixed;
+	left: 5vw;
+	top: 2vh;
+}
+
+#mapCanvas{
+	height: 90vh;
+	width: 90vw;
+	position: relative;
+	overflow: hidden;
+}
+
+#apparentWind{
+    position: fixed;
+    top: 25vh;
+    left: 7vw;
+}
+
+#theoreticalWind{
+	position: fixed;
+    top: 45vh;
+    left: 6.5vw;
+}
+
+#compass{
+	position: fixed;
+    /*top: 5vh;*/
+    left: 44.5vw;
+}
+
+#coursetrack{
+	position: fixed;
+	top: 2.5vh;
+    left: 25vw;
+}
+
+#speed{
+	position: fixed;
+	top: 2.5vh;
+    left: 60vw;
+}
+
+#pitchroll{
+    position: fixed;
+    top: 65vh;
+    left: 6vw;
+}
+
+#gyro{
+    position: fixed;
+    top: 45vh;
+    left: 85vw;
+}
+
+#humidity{
+    position: fixed;
+    top: 20vh;
+    left: 85vw;
+}
